Fix card image layout issues

--- a/src/app/home/category-card/category-card.component.css
+++ b/src/app/home/category-card/category-card.component.css
@@ -14,7 +14,7 @@
 
 .card-img-top {
   width: 100%;
-  height: 35vh;
+  min-height: 20vh;
   object-fit: cover;
 }
 
